# min-wallet-ios

./: .gitignore  .swift-format  AuthKey_U3WM28A5F7.p8  Podfile  apollo-codegen-config.json
.github/workflows/: beta.yaml  ci.yaml  lint.yaml
CoreDataRepository/: Package.resolved  Package.swift
MinWallet/: ContentView.swift  Info.plist  MinWallet.entitlements  MinWalletApp.swift
MinWallet.xcodeproj/: project.pbxproj
MinWallet.xcworkspace/: contents.xcworkspacedata
MinWallet/Data/Model/: AggregatorSource.swift  AppSetting+Currency.swift  AppSetting.swift  AssetData.swift  AssetPosition.swift  AssetsResponse.swift  BuildTxRequest.swift  ChartPeriod.swift  EstimationRequest.swift  LPAssetPosition.swift  Language.swift  MinWallet+Mapper.swift  OrderHistory.swift  OrderHistoryV2+Asset.swift  OrderHistoryV2+Detail.swift  OrderHistoryV2+Request.swift  OrderHistoryV2+UI.swift  OrderHistoryV2.swift  PasswordValidation.swift  SwapTokenSetting.swift  Token.swift  TokenFavourite.swift  TokenProtocol+Ext.swift  TokenProtocol.swift  TokenWithPrice.swift  UserInfo.swift  (+5 more)
MinWallet/Environment/: AppConfig.xcconfig  Constant.swift  Development.xcconfig  Info.plist  MinWallet.entitlements  Production.xcconfig
MinWalletAPI/: Package.swift
OneSignalNotificationServiceExtension/: OneSignalNotificationServiceExtension.entitlements
docs/: CategoryHome.md  CategorySwap.md  CategoryWallet.md
fastlane/: Appfile  Fastfile  Matchfile  README.md  report.xml
rust/: .gitignore  Cargo.toml  README.md  a.json  build.sh
rust/src/: asset.rs  bip39.rs  bytes.rs  crypto.rs  lib.rs  minswap_provider.rs  minwallet.rs  minwallet_backup.rs  mwrust.udl  network.rs  public_key_hash.rs  translucent_helpers.rs  tx_in.rs  tx_out.rs  utils.rs  utxo.rs  value.rs
rust/src/wallet/: embedded.rs  emip3.rs  maestro.rs  mod.rs  provider.rs
(+296 files in other folders)
