[package]
name = "mwrust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
tiny-bip39 = "2.0.0"
cardano-serialization-lib = "13.2.0"
hex = "0.4.3"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
uniffi = { version = "0.28.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mwrust"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
